--- a/public/css/font_external.css
+++ b/public/css/font_external.css
@@ -2,10 +2,10 @@
     font-family: 'Roboto-Regular';
     font-style: normal;
     font-weight: 300;
-    src:    url('../css/font/Roboto-Regular.eot'); /* IE9 Compat Modes */
-    src:    url('../css/font/Roboto-Regular.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
-            url('../css/font/Roboto-Regular.woff') format('woff'), /* Pretty Modern Browsers */
-            url('../css/font/Roboto-Regular.ttf') format('truetype'); /* Safari, Android, iOS */
+    src:    url('../css/fonts/Roboto-Regular.eot'); /* IE9 Compat Modes */
+    src:    url('../css/fonts/Roboto-Regular.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+            url('../css/fonts/Roboto-Regular.woff') format('woff'), /* Pretty Modern Browsers */
+            url('../css/fonts/Roboto-Regular.ttf') format('truetype'); /* Safari, Android, iOS */
     font-weight: normal;
     font-style: normal;
 }
@@ -13,9 +13,9 @@
     font-family: 'Roboto-Regular';
     font-style: normal;
     font-weight: 300;
-    src:    url('../css/font/Roboto-Bold.eot'); /* IE9 Compat Modes */
-    src:    url('../css/font/Roboto-Bold.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
-            url('../css/font/Roboto-Bold.woff') format('woff'), /* Pretty Modern Browsers */
-            url('../css/font/Roboto-Bold.ttf') format('truetype'); /* Safari, Android, iOS */
+    src:    url('../css/fonts/Roboto-Bold.eot'); /* IE9 Compat Modes */
+    src:    url('../css/fonts/Roboto-Bold.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+            url('../css/fonts/Roboto-Bold.woff') format('woff'), /* Pretty Modern Browsers */
+            url('../css/fonts/Roboto-Bold.ttf') format('truetype'); /* Safari, Android, iOS */
     font-weight: bold;
 }
