--- a/public/css/main_styleM.css
+++ b/public/css/main_styleM.css
@@ -4,31 +4,45 @@
     outline: 0;
 }
 
+::-webkit-scrollbar {
+    width: 10px;
+    height: 10px;
+    border-bottom: 1px solid #eee; 
+    border-top: 1px solid #eee;
+}
+::-webkit-scrollbar-thumb {
+    /*border-radius: 8px;*/
+    background-color: #C3C3C3;
+    border: 2px solid #eee;
+}
+::-webkit-scrollbar-track {
+    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.2);
+}
+#lc-box::-webkit-scrollbar { 
+    display: none; 
+}
 body {
-    -webkit-text-stroke: 0.3px;
-    -webkit-text-stroke-width: .7px;
-    -webkit-text-stroke-color: #34343b;
     text-rendering: optimizeLegibility !important;
     -webkit-font-smoothing: antialiased;
-    text-shadow: 1px 1px 1px rgba(0,0,0,0.004);
     font-smooth: auto;
     background: #F2F2F2;
     font-family: 'Roboto-Regular', Tahoma, Arial, 'Helvetica Neue LT';
+    padding:  10pt;
 }
 h2{
-    font-size: 14px;
+    font-size: 20pt;
     white-space: nowrap;
     font-weight: normal;
 }
 
 h3 {
-    font-size: 13px;
+    font-size: 18pt;
     white-space: nowrap;
     font-weight: normal;
 }
 
 p {
-    font-size: 13px;
+    font-size: 18pt;
     text-align: justify;
     margin-bottom: 5px;
 }
@@ -36,10 +50,10 @@ p {
 a:not(.notLink) {
     color: #0088CC;
     text-decoration: none;
-    font-size: 14px;
+    font-size: 20pt;
 }
 a:not(.notLink):hover {
-    color: #FF3400 !important;
+    color: #FF3400;
     cursor: pointer;
 }
 
@@ -53,7 +67,7 @@ select {
     background: #F2F2F2;
     padding: 0px 0px 0px 5px;
     /*margin: 1px;*/
-    border: 1px solid #DEDEDE;
+    border: 2px solid #DEDEDE;
     width: 100%;
 }
 option {
@@ -83,54 +97,98 @@ img.image-opaque:hover {
     border-color: #FF3400;
 }
 #header {
+    -webkit-backface-visibility: hidden;
+    backface-visibility: hidden;
     width: auto;
-    height: 40px;
+    height: 80px;
     margin: 0 auto;
     background: none repeat scroll 0% 0% rgb(0, 0, 0);
     /*margin-bottom: 15px;*/
     position: fixed; top: 0px; z-index: 100; width: 100%;
-    -webkit-backface-visibility: hidden;
+    margin-left: -10pt;
 }
 #h-content {
-    width: 980px;
+    width: 100%;
     margin: 0 auto;
 }
 
 #footer {
-    width: 980px;
+    width: 100%;
     clear: both;
+    text-align: center;
 }
-#f-content {
-    width: 780px;
-    float: left;
-}
-
-
-#h-nav .site-name a { height: 40px; width: 43px; background: url('../images/site-logo-01.png') no-repeat scroll 0px 0px transparent; margin-right: -15px;}
-#h-nav .site-name a:hover { background-position: 0px -41px !important; }
+#h-nav .site-name a { height: 80px; width: 83px; background: url('../images/site-logo-02M.png') no-repeat scroll 0px 0px transparent; margin-right: -15px;}
+#h-nav .site-name a:hover { background-position: 0px -81px !important; }
 
 #h-nav li a {
     color: #ffffff;
-    text-transform: uppercase;
-    font-size: 13px;
+    font-size: 40pt;
     white-space: nowrap;
-    float: left;
     padding: 0px 15px 0 15px;
-    line-height: 40px;
+    line-height: 80px;
     font-weight: bold;
 }
 
 #h-nav li a:hover {
     color: #FF3400;
 }
+#h-nav li a.selected {
+    color: #FF3400;
+}
+#h-nav li a.not-selected {
+    color: #ffffff;
+}
+#menu-mobile {
+    height: 100%; min-width: 400px; background: none repeat scroll 0% 0% rgb(0, 0, 0); position: fixed; left: -450px; top: 80px; z-index: 999; padding: 0 25px 15px 25px; overflow-y: auto; -webkit-overflow-scrolling: touch; box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
+}
+.h-navM li, .h-navM-small li  {
+    border-bottom: 2px solid #A9A9A9;
+    cursor: pointer;
+}
+.h-navM li a, #menu-mobile h3 {
+    color: #EAEAEA;
+    /*text-transform: uppercase;*/
+    font-size: 20pt;
+    white-space: nowrap;
+    clear: both;
+    line-height: 60px;
+    font-weight: bold;
+}
+#menu-mobile h3 {
+    background-color: #0088CC;
+    margin: 0 -25px;
+    padding-left: 10px;
+    color: #ffffff;
+}
+.h-navM li a:hover {
+    color: #FF3400 !important;
+}
+.h-navM li a.selected {
+    color: #FF3400 !important;
+}
+.h-navM li a i {
+    width: 40px;
+    color: #A9A9A9;
+}
+
+.h-navM-small li a, #menu-mobile h3.small {
+    color: #ffffff;
+    /*text-transform: uppercase;*/
+    font-size: 20pt;
+    white-space: nowrap;
+    clear: both;
+    line-height: 50px;
+    font-weight: bold;
+}
 
 #wrapper {
-    width: 980px;
-    padding-top: 55px; /*40+15*/
+    width: 100%;
+    padding-top: 95px; /*80+15*/
+    margin-top: -10pt;
 }
 
 #w-left {
-    width: 780px;
+    width: 100%;
     float: left;
 }
 
@@ -140,7 +198,7 @@ img.image-opaque:hover {
 }
 
 #w-left-top {
-    height: 230px;
+    min-height: 230px;
     margin-bottom: 15px;
 }
 #w-left-middle {
@@ -153,24 +211,26 @@ img.image-opaque:hover {
 }
 
 .w-tab-menu {
-    background-color: #A9A9A9;
-    height: 30px;
-    border: 1px solid #A9A9A9;
-    border-radius: 6px 6px 0 0;
+    background: #A9A9A9;
+    height: 60px;
+    border: 2px solid #A9A9A9;
+    /*border-radius: 6px 6px 0 0;*/
     padding-left: 10px;
 }
 .w-tab-menu > div {
-    height: 21px; margin-top: 4.5px;    
+    height: 42px; margin-top: 9px;    
 }
+.w-tab-menu .views { width: 115px; height: 42px; float: left; }
 .w-tab-menu .views a {
     float: left;
     display:block;
     text-indent:-9999px;
 }
-.w-tab-menu .views a.view-grid { width: 28px; height: 21px; background: url('../images/views_poster.gif') no-repeat scroll 0px -21px transparent; }
-.w-tab-menu .views a.view-list { width: 28px; height: 21px; background: url('../images/views_textcolumn.gif') no-repeat scroll 0px -21px transparent; }
-.w-tab-menu .views a.view-grid.selected {background: url('../images/views_poster.gif') no-repeat scroll 0px -63px transparent;}
-.w-tab-menu .views a.view-list.selected {background: url('../images/views_textcolumn.gif') no-repeat scroll 0px -63px transparent;}
+
+.w-tab-menu .views a.view-grid { width: 56px; height: 42px; background: url('../images/views_posterM.png') no-repeat scroll 0px -42px transparent; }
+.w-tab-menu .views a.view-list { width: 56px; height: 42px; background: url('../images/views_textcolumnM.png') no-repeat scroll 0px -42px transparent; }
+.w-tab-menu .views a.view-grid.selected {background: url('../images/views_posterM.png') no-repeat scroll 0px -126px transparent;}
+.w-tab-menu .views a.view-list.selected {background: url('../images/views_textcolumnM.png') no-repeat scroll 0px -126px transparent;}
 /*.w-tab-menu .views a.view-grid:hover { background: url('../images/views_poster.gif') no-repeat scroll 0px -42px transparent; }
 .w-tab-menu .views a.view-list:hover { background: url('../images/views_textcolumn.gif') no-repeat scroll 0px -42px transparent; }*/
 
@@ -178,13 +238,13 @@ img.image-opaque:hover {
     float: left;
     white-space: nowrap;
     color: #676767;
-    margin: 0px 0px 0px 10px;
-    line-height: 21px;
+    margin: 0px 0px 0px 20px;
+    line-height: 42px;
 }
 .w-tab-menu ul li a.selected {
-    padding: 0px 7px;    
+    padding: 0px 15pt;    
     background-color: #676767;
-    border-radius: 4px;
+    border-radius: 8px;
     color: #ffffff !important;
 }
 
@@ -192,8 +252,8 @@ img.image-opaque:hover {
     background: #ffffff;
     padding: 28px;
     overflow: hidden; /*or using float*/
-    border: 1px solid #CCCCCC;
-    border-radius: 0 0 6px 6px;
+    border: 2px solid #CCCCCC;
+    /*border-radius: 0 0 6px 6px;*/
 }
 
 .box {
@@ -205,35 +265,36 @@ img.image-opaque:hover {
     margin: 0 0 15px 10px;
 }
 .box .b-items-grid a img.posterPhim {
-    width: 134px;
-    height: 193px;
-    border: 1px solid #A8A8A8;
+    width: 268px;
+    height: 386px;
+    border: 2px solid #A8A8A8;
 }
 .box .b-items-grid a img.posterTin {
-    width: 134px;
-    height: 95px;
-    border: 1px solid #A8A8A8;
+    width: 268px;
+    height: 190px;
+    border: 2px solid #A8A8A8;
 }
 .box .b-items-grid h2 {
     padding: 5px 0;
 }
 .box .b-items-grid h2 a {
-    font-size: 14px;
+    font-size: 20pt;
     color: #0088CC;
-    text-overflow: ellipsis; -o-text-overflow: ellipsis; overflow: hidden;white-space: nowrap; width: 134px; display:inline-block;
+    text-overflow: ellipsis; -o-text-overflow: ellipsis; overflow: hidden;white-space: nowrap;
+    width: 268px; display:inline-block;
 }
 .box .b-items-grid h2 a:hover {
     color: #FF3400;
 }
 .box .b-items-grid h3 {
     /*Quoc Gia*/
-    color: #676767;    
+    color: #676767;
 }
 .box .b-items-grid span {
-    font-size: 14px;
+    font-size: 20pt;
 }
 .box .b-items-list {
-    overflow: hidden; float: left; margin: 0 0 15px 10px; width: 47%; height: 105px;
+    overflow: hidden; float: left; margin: 0 0 15px 10px; width: 47%; height: 210px;
 }
 .box .b-items-list:nth-child(2n) {
     float: right !important;
@@ -241,10 +302,11 @@ img.image-opaque:hover {
 .box .b-items-list h3 a{
     text-overflow: ellipsis; -o-text-overflow: ellipsis; overflow: hidden; white-space: nowrap; width: 100%; display:inline-block;
 }
+
 /*-- w-right*/
 #w-right .boxHelper {
     border: 1px solid #CCCCCC;
-    border-radius: 6px;
+    border-radius: 5px;
     margin-bottom: 20px;
     background: #ffffff;
     overflow: hidden;
@@ -253,8 +315,8 @@ img.image-opaque:hover {
     text-align: center;
     font-size: 15px;
     background: #A9A9A9;
-    border-radius: 6px 6px 0 0;
-    margin: -1px;
+    /*border-radius: 3px 3px 0 0;*/
+    margin: 1px;
     color: #ffffff;
 }
 #w-right .boxHelper ul {
@@ -269,13 +331,13 @@ img.image-opaque:hover {
 
 .lichChieu ul li span {display: block; clear: both;}
 .lichChieu ul li span.tenPhim a {
-    /*font-size: 14px;
+    /*font-size: 20pt;
     color: #0088CC;*/
 }
 
 .lichChieu ul li span.suatChieu a {
     margin-right: 3px;
-    font-size: 13px;
+    font-size: 18pt;
     padding: 0 2px;
     float: left;
 }
@@ -311,7 +373,7 @@ img.image-opaque:hover {
     width: 100%;
     background: none repeat scroll 0 0 #211F20;
     height: 110px;
-    width: 980px;
+    /*width: 980px;*/
     z-index: 15;
     /*margin-left: -100px;*/
 }
@@ -334,7 +396,7 @@ img.image-opaque:hover {
     margin-right: -100px;
 }
 #thumb-tray-content {
-    width: 1050px; /*980+70*/
+    width: 100%; /*980+70*/
     text-align: center;
     margin-right: -70px;
     float: left;
@@ -364,7 +426,7 @@ img.image-opaque:hover {
     float: left;
 }
 #c-h-subtitle h2 {
-    font-size: 13px;
+    font-size: 18pt;
     line-height: 30px;
     float: left;
     white-space: nowrap; display: inline-block;
@@ -387,7 +449,7 @@ img.image-opaque:hover {
 }
 #c-h-tabnav h2{
     color: #ffffff;
-    font-size: 13px;
+    font-size: 18pt;
     line-height: 30px;
     float: left;
     margin-left: 5px;
@@ -415,11 +477,11 @@ img.image-opaque:hover {
 }
 .c-h-menu h2 {
     color: #ffffff;
-    font-size: 13px;
+    font-size: 18pt;
     line-height: 30px;
 }
 .content-swap ul li a{
-    font-size: 13px;
+    font-size: 18pt;
 }
 
 /*-- part 3*/
@@ -436,12 +498,12 @@ img.image-opaque:hover {
     color: #0088CC !important;
 }
 .thumb-tray-content-items a img.selected {
-    border: 1px solid #676767 !important;
+    border: 2px solid #676767 !important;
     opacity: 1.0 !important;
 	filter: alpha(opacity=100) !important; /* For IE8 and earlier */
 }
 .thumb-tray-content-items a img {
-    border: 1px solid #000000;
+    border: 2px solid #000000;
 }
 .thumb-tray-content-items .t-t-c-i-up {
     float: left; width: 100%;  height: 65px;
@@ -457,10 +519,10 @@ img.image-opaque:hover {
     float: right; width: 65px; text-align: center;
 }
 .thumb-tray-content-items .t-t-c-i-up-right .dayofmonth {
-    font-size: 57px; margin: -9px 2px -13px 0; color: #676767; display: block;
+    font-size: 57px; margin: -9px 2px -18pt 0; color: #676767; display: block;
 }
 .thumb-tray-content-items .t-t-c-i-up-right .month {
-    font-size: 13px; color: #676767; display: block;
+    font-size: 18pt; color: #676767; display: block;
 }
 .thumb-tray-content-items .t-t-c-i-up-left .day {
     font-size: 18px; float: left; margin: 2px 0 0 3px; color: #676767;
@@ -476,19 +538,19 @@ img.image-opaque:hover {
 }
 /*-- part 4*/
 #lichChieu-container, #movie-container {
-    width: 980px;
-    height: 490px;
+    /*width: 980px;*/
+    height: 500pt;
     /*text-align: center;*/
 }
-#lc-box {    
-    /*width: 995px;*/
+#lc-box {
     height: 100%;
     margin-left: -15px;
+    overflow-y: auto;
 }
 .lc-b-items {
     float: left;
     display:inline-block;
-    height: 100%;
+    height: 120%;
     margin-left: 15px;
     text-overflow: ellipsis; -o-text-overflow: ellipsis; overflow: hidden;white-space: nowrap; display:inline-block;
 }
@@ -499,7 +561,7 @@ img.image-opaque:hover {
 .lc-b-items h3.titlemovies {
     padding: 5px 50px 5px 5px;
     background: #ff0000;
-    font-size: 14px;
+    font-size: 20pt;
     width: 100%;
 }
 .lc-b-items h3 {
@@ -508,7 +570,7 @@ img.image-opaque:hover {
 .lc-b-items h3.datemovies {
     float: left;
     margin-top: 5px;
-    font-size: 14px;
+    font-size: 20pt;
     color: #ffffff;
     margin-bottom: 0px;
     padding: 0px 5px;
@@ -524,7 +586,7 @@ img.image-opaque:hover {
     color: #ffffff;
     float: left;
     margin-right: 9px;
-    font-size: 14px;
+    font-size: 20pt;
     margin-bottom: 0px;
     margin-top: 0px;
 }
@@ -552,7 +614,7 @@ img.image-opaque:hover {
 /*-- part 5*/
 
 #bangGiaVe-container {
-    width: 980px;
+    /*width: 980px;*/
     height: 490px;
     color: #ffffff;
     text-align: center;
@@ -575,7 +637,7 @@ table thead tr th, table thead tr td {
     padding: 5px 10px;
     background-color: #534434;
 }
-table thead tr th:hover, table thead tr td:hover {
+table#ticket-table thead tr th:hover, table#ticket-table thead tr td:hover {
     background-color: #FF3400;    
     color: #ffffff !important;
 }
@@ -584,7 +646,7 @@ table tbody tr th, table tbody tr td {
     padding: 3px 10px;
     background-color: #534434;
 }
-table tbody tr th:hover, table tbody tr td:hover {
+table#ticket-table tbody tr th:hover, table#ticket-table tbody tr td:hover {
     background-color: #FF3400;
     color: #ffffff !important;
 }
@@ -682,3 +744,20 @@ div[role="seat"]:hover {
 div[role=room] div[role=seat].selected {
     background-color: #0088CC !important;
 }
+
+.lich-chieuM {text-align: center; border: none; border-collapse: collapse; border-spacing: 0}
+.lich-chieuM-top .left, .lich-chieuM-mid .left, .lich-chieuM-bottom .left {
+    width: 30%; background-color: #EC3D68;
+}
+.lich-chieuM-top .right, .lich-chieuM-mid .right, .lich-chieuM-bottom .right {
+    width: 70%; background-color: #ffffff;
+}
+.lich-chieuM-top, .lich-chieuM-bottom {height: 60px;}
+.lich-chieuM-top h2, .lich-chieuM-bottom h2 {width: 80%; line-height: 60px;}
+.lich-chieuM-top .left h2 {color: #ffffff;}
+.lich-chieuM-top .right h2 {border-bottom: 2px solid #AF2445; color: #AF2445; width: 90%;}
+.lich-chieuM-mid .left {font-size: 190pt; color: #ffffff;}
+.lich-chieuM-mid .right {text-align: left !important; width: 90%; }
+.lich-chieuM-mid .right ul {width: 90%;}
+.lich-chieuM-bottom .left h2 {border-top: 2px solid #AF2445; color: #AF2445;}
+.lich-chieuM-bottom .right h2 {color: #AF2445; width: 90%;}
