--- a/public/css/main_styleM.css
+++ b/public/css/main_styleM.css
@@ -18,16 +18,13 @@
 ::-webkit-scrollbar-track {
     -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.2);
 }
-#lc-box::-webkit-scrollbar { 
-    display: none; 
-}
 body {
     text-rendering: optimizeLegibility !important;
     -webkit-font-smoothing: antialiased;
     font-smooth: auto;
     background: #F2F2F2;
     font-family: 'Roboto-Regular', Tahoma, Arial, 'Helvetica Neue LT';
-    padding:  10pt;
+    overflow-x: hidden;
 }
 h2{
     font-size: 20pt;
@@ -79,10 +76,10 @@ option {
 	opacity: 0.85;
 }
 .fntGrey {
-    color: #676767;
+    color: #676767 !important;
 }
 .fntLightGrey {
-    color: #CCCCCC;
+    color: #CCCCCC !important;
 }
 .clear {
     clear: both;
@@ -97,26 +94,17 @@ img.image-opaque:hover {
     border-color: #FF3400;
 }
 #header {
-    -webkit-backface-visibility: hidden;
+    -webkit-backface-visibility: hidden;    
     backface-visibility: hidden;
-    width: auto;
     height: 80px;
-    margin: 0 auto;
     background: none repeat scroll 0% 0% rgb(0, 0, 0);
-    /*margin-bottom: 15px;*/
-    position: fixed; top: 0px; z-index: 100; width: 100%;
-    margin-left: -10pt;
+    position: fixed; left: 0; top: 0; z-index: 100; width: 100%;
 }
 #h-content {
     width: 100%;
     margin: 0 auto;
 }
 
-#footer {
-    width: 100%;
-    clear: both;
-    text-align: center;
-}
 #h-nav .site-name a { height: 80px; width: 83px; background: url('../images/site-logo-02M.png') no-repeat scroll 0px 0px transparent; margin-right: -15px;}
 #h-nav .site-name a:hover { background-position: 0px -81px !important; }
 
@@ -139,15 +127,30 @@ img.image-opaque:hover {
     color: #ffffff;
 }
 #menu-mobile {
-    height: 100%; min-width: 400px; background: none repeat scroll 0% 0% rgb(0, 0, 0); position: fixed; left: -450px; top: 80px; z-index: 999; padding: 0 25px 15px 25px; overflow-y: auto; -webkit-overflow-scrolling: touch; box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
+    height: 100%; width: 430px; background: none repeat scroll 0% 0% rgb(0, 0, 0); position: fixed; left: -461px; top: 0px; z-index: 100; -webkit-overflow-scrolling: touch; border-right: 2px solid #A9A9A9;
+    -webkit-box-shadow: 11px 1px 11px 0px rgba(0,0,0,0.75);
+    -moz-box-shadow: 11px 1px 11px 0px rgba(0,0,0,0.75);
+    box-shadow: 11px 1px 11px 0px rgba(0,0,0,0.75);
+}
+#menu-mobile-top {
+    height: 240px;
+    background: #29B09F url('../images/Android-Lollipop-wallpapers-5.jpg');
+    background-size: 100% auto;
+    -webkit-box-shadow: 0px 7px 6px 0px rgba(66,66,66,0.77);
+    -moz-box-shadow: 0px 7px 6px 0px rgba(66,66,66,0.77);
+    box-shadow: 0px 7px 6px 0px rgba(66,66,66,0.77);
+}
+#menu-mobile-bottom {
+    overflow-y: auto;
+    height: 100%;
 }
 .h-navM li, .h-navM-small li  {
-    border-bottom: 2px solid #A9A9A9;
+    /*border-bottom: 2px solid #A9A9A9;*/
     cursor: pointer;
+    margin: 0 25px;
 }
 .h-navM li a, #menu-mobile h3 {
     color: #EAEAEA;
-    /*text-transform: uppercase;*/
     font-size: 20pt;
     white-space: nowrap;
     clear: both;
@@ -155,10 +158,10 @@ img.image-opaque:hover {
     font-weight: bold;
 }
 #menu-mobile h3 {
-    background-color: #0088CC;
-    margin: 0 -25px;
-    padding-left: 10px;
-    color: #ffffff;
+    border-bottom: 2px solid #A9A9A9;
+    color: #FF3400;
+    margin: 0 10px;
+    text-transform: uppercase;
 }
 .h-navM li a:hover {
     color: #FF3400 !important;
@@ -171,30 +174,30 @@ img.image-opaque:hover {
     color: #A9A9A9;
 }
 
-.h-navM-small li a, #menu-mobile h3.small {
-    color: #ffffff;
-    /*text-transform: uppercase;*/
-    font-size: 20pt;
-    white-space: nowrap;
-    clear: both;
-    line-height: 50px;
-    font-weight: bold;
-}
-
 #wrapper {
     width: 100%;
-    padding-top: 95px; /*80+15*/
-    margin-top: -10pt;
+    position: relative;
+    top: 85px; /*80+5*/
+    left: 0;
+    bottom: 15px;
 }
+
+#footer {
+    width: 100%;
+    position: relative;
+    top:  100px; /*85+15*/
+    text-align: center;
+    clear: both;
+}
+#footer .top {background-color: #484848; padding: 15px 10px;}
+#footer .bottom {background-color: #484848; padding: 0 10px 15px 10px;}
+#footer .top h3 {color: #f2f2f2}
+#footer .bottom h3, #footer .bottom h3 a {color: #939090;}
+#footer div h3 {white-space: normal;}
 
 #w-left {
     width: 100%;
     float: left;
-}
-
-#w-right {
-    width: 190px;
-    float: right;
 }
 
 #w-left-top {
@@ -303,32 +306,6 @@ img.image-opaque:hover {
     text-overflow: ellipsis; -o-text-overflow: ellipsis; overflow: hidden; white-space: nowrap; width: 100%; display:inline-block;
 }
 
-/*-- w-right*/
-#w-right .boxHelper {
-    border: 1px solid #CCCCCC;
-    border-radius: 5px;
-    margin-bottom: 20px;
-    background: #ffffff;
-    overflow: hidden;
-}
-#w-right .boxHelper h3 {
-    text-align: center;
-    font-size: 15px;
-    background: #A9A9A9;
-    /*border-radius: 3px 3px 0 0;*/
-    margin: 1px;
-    color: #ffffff;
-}
-#w-right .boxHelper ul {
-    padding: 0 10px 5px 10px;
-    overflow: hidden;
-}
-
-#w-right .boxHelper ul li {
-    padding: 2px;
-    clear: both;
-}
-
 .lichChieu ul li span {display: block; clear: both;}
 .lichChieu ul li span.tenPhim a {
     /*font-size: 20pt;
@@ -342,31 +319,6 @@ img.image-opaque:hover {
     float: left;
 }
 
-/*-- footer*/
-#f-top-content {
-    /*width: 100%;
-    float: left;*/
-    /*or use height*/
-    height: 20px;
-}
-#f-bottom-content {
-    height: 35px;
-    clear: both;
-}
-
-#f-top-content div.f-left div {
-    float: left;
-    margin-right: 30px;
-}
-#f-top-content div.f-right div {
-    float: right;
-    margin-left: 2px;
-}
-#f-top-content div div i{
-    float: left;
-    margin-right: 5px;
-}
-
 /*-part 2*/
 #thumb-tray {
     float: left;
@@ -377,24 +329,7 @@ img.image-opaque:hover {
     z-index: 15;
     /*margin-left: -100px;*/
 }
-#fade-left {
-    background-color: #211F20;
-    background-image: linear-gradient(to left, #211F20, #000000);
-    display: block;
-    height: 110px;
-    width: 100px;
-    float: left;
-    margin-left: -100px;
-}
-#fade-right {
-    background-color: #211F20;
-    background-image: linear-gradient(to right, #211F20, #000000);;
-    display: block;
-    height: 110px;
-    width: 100px;
-    float: right;
-    margin-right: -100px;
-}
+
 #thumb-tray-content {
     width: 100%; /*980+70*/
     text-align: center;
@@ -519,13 +454,13 @@ img.image-opaque:hover {
     float: right; width: 65px; text-align: center;
 }
 .thumb-tray-content-items .t-t-c-i-up-right .dayofmonth {
-    font-size: 57px; margin: -9px 2px -18pt 0; color: #676767; display: block;
+    font-size: 42pt; margin: -9px 2px -9pt 0; color: #676767; display: block;
 }
 .thumb-tray-content-items .t-t-c-i-up-right .month {
-    font-size: 18pt; color: #676767; display: block;
+    font-size: 10pt; color: #676767; display: block;
 }
 .thumb-tray-content-items .t-t-c-i-up-left .day {
-    font-size: 18px; float: left; margin: 2px 0 0 3px; color: #676767;
+    font-size: 10pt; float: left; margin: 2px 0 0 3px; color: #676767;
 }
 .thumb-tray-content-items .t-t-c-i-up-left .event {
     font-size: 12px; float: left; margin: 3px 0 0 3px; padding: 0px 5px; background-color: #ff0000; border-radius: 3px; color: #ffffff;
@@ -538,21 +473,15 @@ img.image-opaque:hover {
 }
 /*-- part 4*/
 #lichChieu-container, #movie-container {
-    /*width: 980px;*/
-    height: 500pt;
+    min-height: 490px;
     /*text-align: center;*/
 }
 #lc-box {
-    height: 100%;
-    margin-left: -15px;
-    overflow-y: auto;
+    width: 100%;
 }
 .lc-b-items {
-    float: left;
-    display:inline-block;
-    height: 120%;
-    margin-left: 15px;
-    text-overflow: ellipsis; -o-text-overflow: ellipsis; overflow: hidden;white-space: nowrap; display:inline-block;
+    padding: 10px;
+    margin-bottom: 10px;
 }
 .lc-b-items h3 {
     float: left;
@@ -563,9 +492,6 @@ img.image-opaque:hover {
     background: #ff0000;
     font-size: 20pt;
     width: 100%;
-}
-.lc-b-items h3 {
-    
 }
 .lc-b-items h3.datemovies {
     float: left;
@@ -587,8 +513,18 @@ img.image-opaque:hover {
     float: left;
     margin-right: 9px;
     font-size: 20pt;
-    margin-bottom: 0px;
-    margin-top: 0px;
+}
+.lc-b-items .lc-b-itemsM h2.timemovies a {
+    color: #ffffff;
+}
+.lc-b-items .lc-b-itemsM h2.timemovies span {
+    color: rgba(255, 255, 255, 0.5);
+}
+.lc-b-items .lc-b-itemsM h2.timemovies {
+    background: none repeat scroll 0% 0% rgba(0, 0, 0, 0.4); padding: 2px 10px; white-space: normal; color: #ffffff;
+}
+.lc-b-items .lc-b-itemsM h2.title a {
+    text-transform: uppercase; color: #ffffff !important;
 }
 .formatmovies {
     padding: 0px 5px;
@@ -632,7 +568,7 @@ img.image-opaque:hover {
 table {    
     width: 100%;
 }
-table thead tr th, table thead tr td {
+table#ticket-table thead tr th, table#ticket-table thead tr td {
     /*border: 1px solid #0088CC;*/
     padding: 5px 10px;
     background-color: #534434;
@@ -641,7 +577,7 @@ table#ticket-table thead tr th:hover, table#ticket-table thead tr td:hover {
     background-color: #FF3400;    
     color: #ffffff !important;
 }
-table tbody tr th, table tbody tr td {
+table#ticket-table tbody tr th, table#ticket-table tbody tr td {
     /*border: 1px solid #0088CC;*/
     padding: 3px 10px;
     background-color: #534434;
@@ -661,20 +597,20 @@ thead tr td.v_spacer, tbody tr td.v_spacer {
     background: none !important;
 }
 .bgPurple {
-    background-color: #9D1F61;
+    background-color: #9D1F61 !important;
 }
 .bgGrey {
     /*background-color: #EEA238;*/
-    background-color: #676767;
+    background-color: #676767 !important;
 }
 .bgBlue {
-    background-color: #0088CC;
+    background-color: #0088CC !important;
 }
 .bgPink {
-    background-color: #FF6AAF;
+    background-color: #FF6AAF !important;
 }
 .bgBrown {
-    background-color: #6A4D2E;
+    background-color: #6A4D2E !important;
 }
 .bgv-subtitle{
     border-bottom: 2px solid rgba(69, 69, 69, 0.8);  
@@ -745,19 +681,25 @@ div[role=room] div[role=seat].selected {
     background-color: #0088CC !important;
 }
 
-.lich-chieuM {text-align: center; border: none; border-collapse: collapse; border-spacing: 0}
+.lich-chieuM, .lc-b-itemsM {text-align: center; border: none; border-collapse: collapse; border-spacing: 0; width: 100%; table-layout: fixed;}
 .lich-chieuM-top .left, .lich-chieuM-mid .left, .lich-chieuM-bottom .left {
-    width: 30%; background-color: #EC3D68;
+    width: 40%; background-color: #ffffff;
 }
 .lich-chieuM-top .right, .lich-chieuM-mid .right, .lich-chieuM-bottom .right {
-    width: 70%; background-color: #ffffff;
+    width: 60%; background-color: #ffffff;
 }
 .lich-chieuM-top, .lich-chieuM-bottom {height: 60px;}
 .lich-chieuM-top h2, .lich-chieuM-bottom h2 {width: 80%; line-height: 60px;}
-.lich-chieuM-top .left h2 {color: #ffffff;}
-.lich-chieuM-top .right h2 {border-bottom: 2px solid #AF2445; color: #AF2445; width: 90%;}
-.lich-chieuM-mid .left {font-size: 190pt; color: #ffffff;}
-.lich-chieuM-mid .right {text-align: left !important; width: 90%; }
+.lich-chieuM-top .left h2 {color: #ffffff;  text-transform: uppercase;}
+.lich-chieuM-top .right h2 {border-bottom: 2px solid #676767; color: #676767; width: 90%;}
+.lich-chieuM-mid .left {font-size: 160pt; color: #ffffff;}
+.lich-chieuM-mid .right {text-align: left; padding: 10px 0; /*width: 90%;*/}
 .lich-chieuM-mid .right ul {width: 90%;}
-.lich-chieuM-bottom .left h2 {border-top: 2px solid #AF2445; color: #AF2445;}
-.lich-chieuM-bottom .right h2 {color: #AF2445; width: 90%;}
+.lich-chieuM-bottom .left h2 {border-top: 2px solid rgba(0, 0, 0, 0.4); color: rgba(0, 0, 0, 0.4); text-transform: uppercase;}
+.lich-chieuM-bottom .right h2 {color: rgba(0, 0, 0, 0.4); width: 90%;}
+
+.lc-b-itemsM {text-align: left;}
+.lc-b-itemsM tr .left {max-width: 72%;}
+.lc-b-itemsM tr .right {width: 28%;}
+.lc-b-itemsM tr .left h2 {text-overflow: ellipsis; white-space: nowrap; overflow: hidden;}
+.lc-b-itemsM tr .right * {float: right;}
